qwebparse.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  vdecl_list :
  11             | vdecl_list vdecl

  12  vdecl : typ ID SEMI

  13  func_decl_list :
  14                 | func_decl_list func_decl

  15  stmt : expr END
  16       | FOR ID IN expr COLON loop_stmt_list ENDFOR
  17       | IF expr COLON stmt_list ENDIF otherwiseif_list
  18       | IF expr COLON stmt_list ENDIF otherwiseif_list OTHERWISE COLON stmt_list ENDOTHERWISE
  19       | DISPLAY expr END
  20       | OUTPUT END
  21       | OUTPUT expr END

  22  stmt_list :
  23            | stmt_list stmt

  24  loop_stmt_list :
  25                 | loop_stmt_list loop_stmt

  26  loop_stmt : stmt
  27            | PASS END
  28            | CONTINUE END

  29  otherwiseif_list :
  30                   | otherwiseif_list otherwiseif_stmt

  31  otherwiseif_stmt : OTHERWISEIF expr COLON stmt_list ENDOTHERWISEIF

  32  expr : LITERAL
  33       | FLOAT_LITERAL
  34       | BOOL_LITERAL
  35       | ID
  36       | arith_op
  37       | bool_op
  38       | LBRACKET pseudo_list RBRACKET
  39       | list_op
  40       | html_op
  41       | obj_op
  42       | typ ID
  43       | SET ID ASSIGN expr
  44       | LPAREN expr RPAREN
  45       | LBRACE dict RBRACE
  46       | ID LPAREN actuals_opt RPAREN

  47  arith_op : MINUS expr
  48           | expr PLUS expr
  49           | expr MINUS expr
  50           | expr TIMES expr
  51           | expr DIVIDE expr

  52  bool_op : NOT expr
  53          | expr EQ expr
  54          | expr NEQ expr
  55          | expr LT expr
  56          | expr LEQ expr
  57          | expr GT expr
  58          | expr GEQ expr
  59          | expr AND expr
  60          | expr OR expr

  61  pseudo_list :
  62              | expr
  63              | pseudo_list COMMA expr

  64  dict :
  65       | expr COLON expr
  66       | dict COMMA expr COLON expr

  67  list_op : expr DOT APPEND LPAREN expr RPAREN
  68          | expr DOT REMOVE LPAREN expr RPAREN
  69          | expr DOT LENGTH LPAREN RPAREN

  70  html_op : expr DOT CREATEHEADER LPAREN expr RPAREN
  71          | expr DOT CREATEPARAGRAPH LPAREN expr RPAREN
  72          | expr DOT CREATETABLE LPAREN expr RPAREN
  73          | expr DOT CREATEUNORDEREDLIST LPAREN expr RPAREN

  74  obj_op : expr DOT ID
  75         | expr DOT ID ASSIGN expr

  76  func_decl : FUNCTION ID LPAREN formal_opt RPAREN COLON stmt_list END

  77  actuals_opt :
  78              | actuals_list

  79  actuals_list : expr
  80               | actuals_list COMMA expr

  81  formal_opt :
  82             | formal_list

  83  formal_list : typ ID
  84              | formal_list COMMA typ ID

  85  typ : INT
  86      | BOOL
  87      | FLOAT
  88      | CHAR
  89      | VOID

  90  literal : INT_LITERAL
  91          | STRING_LITERAL
  92          | BOOL_LITERAL
  93          | FLOAT_LITERAL

  94  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (94)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (94)

	.  reduce 94


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	EOF  shift 10
	.  error

	vdecl  goto 11
	fdecl  goto 12
	typ  goto 13


state 5
	typ : INT .  (85)

	.  reduce 85


state 6
	typ : BOOL .  (86)

	.  reduce 86


state 7
	typ : FLOAT .  (87)

	.  reduce 87


state 8
	typ : CHAR .  (88)

	.  reduce 88


state 9
	typ : VOID .  (89)

	.  reduce 89


state 10
	program : decls EOF .  (1)

	.  reduce 1


state 11
	decls : decls vdecl .  (3)

	.  reduce 3


state 12
	decls : decls fdecl .  (4)

	.  reduce 4


state 13
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (12)

	ID  shift 14
	.  error


state 14
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (12)

	SEMI  shift 15
	LPAREN  shift 16
	.  error


state 15
	vdecl : typ ID SEMI .  (12)

	.  reduce 12


state 16
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	RPAREN  reduce 6

	typ  goto 17
	formals_opt  goto 18
	formal_list  goto 19


state 17
	formal_list : typ . ID  (8)
	formal_list : typ . ID  (83)

	ID  shift 20
	.  error


state 18
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 21
	.  error


state 19
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)
	formal_list : formal_list . COMMA typ ID  (84)

	COMMA  shift 22
	RPAREN  reduce 7


20: reduce/reduce conflict (reduce 8, reduce 83) on RPAREN
20: reduce/reduce conflict (reduce 8, reduce 83) on COMMA
state 20
	formal_list : typ ID .  (8)
	formal_list : typ ID .  (83)

	.  reduce 8


state 21
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 23
	.  error


state 22
	formal_list : formal_list COMMA . typ ID  (9)
	formal_list : formal_list COMMA . typ ID  (84)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	.  error

	typ  goto 24


state 23
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (10)

	.  reduce 10

	vdecl_list  goto 25


state 24
	formal_list : formal_list COMMA typ . ID  (9)
	formal_list : formal_list COMMA typ . ID  (84)

	ID  shift 26
	.  error


25: shift/reduce conflict (shift 5, reduce 22) on INT
25: shift/reduce conflict (shift 6, reduce 22) on BOOL
25: shift/reduce conflict (shift 7, reduce 22) on FLOAT
25: shift/reduce conflict (shift 8, reduce 22) on CHAR
25: shift/reduce conflict (shift 9, reduce 22) on VOID
state 25
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (11)
	stmt_list : .  (22)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LPAREN  reduce 22
	LBRACE  reduce 22
	RBRACE  reduce 22
	MINUS  reduce 22
	NOT  reduce 22
	DISPLAY  reduce 22
	OUTPUT  reduce 22
	IF  reduce 22
	FOR  reduce 22
	SET  reduce 22
	LBRACKET  reduce 22
	ID  reduce 22
	LITERAL  reduce 22
	BOOL_LITERAL  reduce 22
	FLOAT_LITERAL  reduce 22

	vdecl  goto 27
	typ  goto 28
	stmt_list  goto 29


26: reduce/reduce conflict (reduce 9, reduce 84) on RPAREN
26: reduce/reduce conflict (reduce 9, reduce 84) on COMMA
state 26
	formal_list : formal_list COMMA typ ID .  (9)
	formal_list : formal_list COMMA typ ID .  (84)

	.  reduce 9


state 27
	vdecl_list : vdecl_list vdecl .  (11)

	.  reduce 11


state 28
	vdecl : typ . ID SEMI  (12)

	ID  shift 30
	.  error


state 29
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (23)

	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	DISPLAY  shift 36
	OUTPUT  shift 37
	IF  shift 38
	FOR  shift 39
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	.  error

	typ  goto 46
	stmt  goto 47
	expr  goto 48
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 30
	vdecl : typ ID . SEMI  (12)

	SEMI  shift 15
	.  error


state 31
	expr : LPAREN . expr RPAREN  (44)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	.  error

	typ  goto 46
	expr  goto 54
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 32
	expr : LBRACE . dict RBRACE  (45)
	dict : .  (64)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	RBRACE  reduce 64
	COMMA  reduce 64

	typ  goto 46
	expr  goto 55
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53
	dict  goto 56


state 33
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 34
	arith_op : MINUS . expr  (47)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	.  error

	typ  goto 46
	expr  goto 57
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 35
	bool_op : NOT . expr  (52)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	.  error

	typ  goto 46
	expr  goto 58
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 36
	stmt : DISPLAY . expr END  (19)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	.  error

	typ  goto 46
	expr  goto 59
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 37
	stmt : OUTPUT . END  (20)
	stmt : OUTPUT . expr END  (21)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	END  shift 60
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	.  error

	typ  goto 46
	expr  goto 61
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 38
	stmt : IF . expr COLON stmt_list ENDIF otherwiseif_list  (17)
	stmt : IF . expr COLON stmt_list ENDIF otherwiseif_list OTHERWISE COLON stmt_list ENDOTHERWISE  (18)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	.  error

	typ  goto 46
	expr  goto 62
	arith_op  goto 49
	bool_op  goto 50
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 39
	stmt : FOR . ID IN expr COLON loop_stmt_list ENDFOR  (16)

	ID  shift 63
	.  error


state 40
	expr : SET . ID ASSIGN expr  (43)

	ID  shift 64
	.  error


state 41
	expr : LBRACKET . pseudo_list RBRACKET  (38)
	pseudo_list : .  (61)

	LPAREN  shift 31
	LBRACE  shift 32
	MINUS  shift 34
	NOT  shift 35
	SET  shift 40
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	CHAR  shift 8
	VOID  shift 9
	LBRACKET  shift 41
	ID  shift 42
	LITERAL  shift 43
	BOOL_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	COMMA  reduce 61
	RBRACKET  reduce 61

	typ  goto 46
	expr  goto 65
	arith_op  goto 49
	bool_op  goto 50
	pseudo_list  goto 66
	list_op  goto 51
	html_op  goto 52
	obj_op  goto 53


state 42
	expr : ID .  (35)
	expr : ID . LPAREN actuals_opt RPAREN  (46)

	LPAREN  shift 67
	RPAREN  reduce 35
	RBRACE  reduce 35
	COMMA  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	TIMES  reduce 35
	DIVIDE  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LT  reduce 35
	LEQ  reduce 35
	GT  reduce 35
	GEQ  reduce 35
	AND  reduce 35
	OR  reduce 35
	RBRACKET  reduce 35
	COLON  reduce 35
	DOT  reduce 35
	END  reduce 35


state 43
	expr : LITERAL .  (32)

	.  reduce 32


state 44
	expr : BOOL_LITERAL .  (34)

	.  reduce 34


state 45
	expr : FLOAT_LITERAL .  (33)

	.  reduce 33


state 46
	expr : typ . ID  (42)

	ID  shift 68
	.  error


state 47
	stmt_list : stmt_list stmt .  (23)

	.  reduce 23


state 48
	stmt : expr . END  (15)
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	DOT  shift 81
	END  shift 82
	.  error


state 49
	expr : arith_op .  (36)

	.  reduce 36


state 50
	expr : bool_op .  (37)

	.  reduce 37


state 51
	expr : list_op .  (39)

	.  reduce 39


state 52
	expr : html_op .  (40)

	.  reduce 40


state 53
	expr : obj_op .  (41)

	.  reduce 41


state 54
	expr : LPAREN expr . RPAREN  (44)
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	RPAREN  shift 83
	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	DOT  shift 81
	.  error


state 55
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	dict : expr . COLON expr  (65)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	COLON  shift 84
	DOT  shift 81
	.  error


state 56
	expr : LBRACE dict . RBRACE  (45)
	dict : dict . COMMA expr COLON expr  (66)

	RBRACE  shift 85
	COMMA  shift 86
	.  error


state 57
	arith_op : MINUS expr .  (47)
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	TIMES  shift 71
	DIVIDE  shift 72
	DOT  shift 81
	RPAREN  reduce 47
	RBRACE  reduce 47
	COMMA  reduce 47
	PLUS  reduce 47
	MINUS  reduce 47
	EQ  reduce 47
	NEQ  reduce 47
	LT  reduce 47
	LEQ  reduce 47
	GT  reduce 47
	GEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	RBRACKET  reduce 47
	COLON  reduce 47
	END  reduce 47


state 58
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : NOT expr .  (52)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	DOT  shift 81
	RPAREN  reduce 52
	RBRACE  reduce 52
	COMMA  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	TIMES  reduce 52
	DIVIDE  reduce 52
	EQ  reduce 52
	NEQ  reduce 52
	LT  reduce 52
	LEQ  reduce 52
	GT  reduce 52
	GEQ  reduce 52
	AND  reduce 52
	OR  reduce 52
	RBRACKET  reduce 52
	COLON  reduce 52
	END  reduce 52


state 59
	stmt : DISPLAY expr . END  (19)
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	DOT  shift 81
	END  shift 87
	.  error


state 60
	stmt : OUTPUT END .  (20)

	.  reduce 20


state 61
	stmt : OUTPUT expr . END  (21)
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	DOT  shift 81
	END  shift 88
	.  error


state 62
	stmt : IF expr . COLON stmt_list ENDIF otherwiseif_list  (17)
	stmt : IF expr . COLON stmt_list ENDIF otherwiseif_list OTHERWISE COLON stmt_list ENDOTHERWISE  (18)
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	COLON  shift 89
	DOT  shift 81
	.  error


state 63
	stmt : FOR ID . IN expr COLON loop_stmt_list ENDFOR  (16)

	IN  shift 90
	.  error


state 64
	expr : SET ID . ASSIGN expr  (43)

	ASSIGN  shift 91
	.  error


state 65
	arith_op : expr . PLUS expr  (48)
	arith_op : expr . MINUS expr  (49)
	arith_op : expr . TIMES expr  (50)
	arith_op : expr . DIVIDE expr  (51)
	bool_op : expr . EQ expr  (53)
	bool_op : expr . NEQ expr  (54)
	bool_op : expr . LT expr  (55)
	bool_op : expr . LEQ expr  (56)
	bool_op : expr . GT expr  (57)
	bool_op : expr . GEQ expr  (58)
	bool_op : expr . AND expr  (59)
	bool_op : expr . OR expr  (60)
	pseudo_list : expr .  (62)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (67)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (68)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (69)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (70)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (71)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (72)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (73)
	obj_op : expr . DOT ID  (74)
	obj_op : expr . DOT ID ASSIGN expr  (75)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	EQ  shift 73
	NEQ  shift 74
	LT  shift 75
	LEQ  shift 76
	GT  shift 77
	GEQ  shift 78
	AND  shift 79
	OR  shift 80
	DOT  shift 81
	COMMA  reduce 62
	RBRACKET  reduce 62


state 66
	expr : LBRACKET pseudo_list . RBRACKET  (38)
	pseudo_list : pseudo_list . COMMA expr  (63)

	COMMA  shift 92
	RBRACKET  shift 93
	.  error


state 67
	expr : ID LPAREN . actuals_opt RPAREN  (46)
	actuals_opt : .  (77)
